--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,14 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Material+Icons+Round');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
-@import "navbar.component";
-@import "common";
-@import "home.page";
 @import "utils";
-@import "forms";
-@import "carousel-banner.component";
+@import "navbar.component";
+@import "pricing.slice";
+@import "common.slice";
 @import "features.slice";
-@import "blog-post";
-@import "blog-with-image.slice";
-@import "blog-list";
-@import "planes";
