--- a/src/style/_utils.scss
+++ b/src/style/_utils.scss
@@ -1,24 +1,3 @@
-.bg-dark-blue {
-  background-color: $dark-blue;
-}
-
-.font-14 {
-  font-size: 14px;
-}
-
-.line-height-25 {
-  line-height: 25px;
-}
-
-.w-90 {
-  width: 90%;
-}
-
-.mw-737 {
-  max-width: 737px;
-}
-
-.mw-690 {
-  max-width: 690px;
-
+.mt-10 {
+  margin-top: 10rem;
 }
