--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -74,7 +74,59 @@ $carousel-caption-color: auto;
 $pricing-card-body-height: 380px;
 
 
-//img
+//feature-slice
+$col-1-image-width: 320px;
+$col-1-image-fit: contain;
+$col-1-image-height: 300px;
+$col-1-title-align: left;
+$col-1-text-align: left;
+$col-1-btn-width: 120px;
+$col-1-btn-size: md;
+
+
+$col-3-image-height: 200px;
+$col-3-image-fit: contain;
+$col-3-image-width: 100%;
+$col-3-title-align: center;
+$col-3-text-align: center;
+$col-3-btn-width: 120px;
+$col-3-btn-size: md;
+
+$col-4-image-height: 200px;
+$col-4-image-fit: contain;
+$col-4-image-width: 100%;
+$col-4-title-align: center;
+$col-4-text-align: center;
+$col-4-btn-width: 120px;
+$col-4-btn-size: md;
+
+$col-2-small-image-width: 100px;
+$col-2-small-image-fit: contain;
+$col-2-small-image-height: 100%;
+$col-2-small-title-align: left;
+$col-2-small-text-align: left;
+$col-2-small-btn-width: 120px;
+$col-2-small-btn-size: md;
+
+
+$col-4-small-image-width: 100px;
+$col-4-small-image-fit: contain;
+$col-4-small-image-height: 100%;
+$col-4-small-title-align: left;
+$col-4-small-text-align: left;
+$col-4-small-btn-width: 120px;
+$col-4-small-btn-size: md;
+
+
+$block-3-image-height: 200px;
+$block-3-image-fit: contain;
+$block-3-image-width: 100%;
+$block-3-title-align: center;
+$block-3-text-align: center;
+$block-3-btn-width: 120px;
+$block-3-btn-size: md;
+
+
 $width-more-height-md: 200px;
 $height-more-width-md: 200px;
 $width-less-height-md: 100%;
