--- a/src/style/_features.slice.scss
+++ b/src/style/_features.slice.scss
@@ -67,40 +67,192 @@
 }
 
 .col-1-img {
+  margin-right: 70px;
+  .gatsby-image-wrapper {
+    width: $col-1-image-width;
+    height: $col-1-image-height;
+  }
   img {
-    @extend .width-more-height-md;
+    max-width: $col-1-image-width;
+    max-height: $col-1-image-height;
+    object-fit: $col-1-image-fit;
+  }
+}
+
+.col-1-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $col-1-title-align;
+  }
+  p {
+    text-align: $col-1-text-align;
+  }
+  .btn {
+    min-width: $col-1-btn-width;
+    //@extend $col-1-btn-size;
+  }
+}
+
+.col-1-mixed:nth-child(odd) {
+  flex-direction: row-reverse;
+  .col-1-image {
+    margin-left: 70px;
+    margin-right: 0;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .col-1-mixed {
+    flex-wrap: wrap;
+    justify-content: center;
+    .col-1-image {
+      margin-bottom: 20px;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      .gatsby-image-wrapper {
+        img {
+          max-width: 100%;
+        }
+      }
+    }
   }
 }
 
 .col-2-small-img {
+  min-width: $col-2-small-image-width;
+  width: $col-2-small-image-width;
+  text-align: center;
   img {
-    @extend .width-more-height-sm;
+    max-width: $col-2-small-image-width;
+    max-height: $col-2-small-image-height;
+    object-fit: $col-2-small-image-fit;
   }
 }
+
+.col-2-small-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $col-2-small-title-align;
+  }
+  p {
+    text-align: $col-2-small-text-align;
+  }
+  .btn {
+    min-width: $col-2-small-btn-width;
+    //@extend $col-4-btn-size;
+  }
+}
+
 
 .col-3-img {
+  height: $col-3-image-height;
+  text-align: center;
+  .gatsby-image-wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
   img {
-    @extend .height-more-width-md;
+    max-height: $col-3-image-height;
+    max-width: $col-3-image-width;
+    object-fit: $col-3-image-fit;
   }
 }
+
+.col-3-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $col-3-title-align;
+  }
+  p {
+    text-align: $col-3-text-align;
+  }
+  .btn {
+    min-width: $col-3-btn-width;
+    //@extend $col-4-btn-size;
+  }
+}
+
 
 .col-4-img {
+  height: $col-4-image-height;
+  text-align: center;
+  .gatsby-image-wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
   img {
-    @extend .height-more-width-md;
+    max-height: $col-4-image-height;
+    max-width: $col-4-image-width;
+    object-fit: $col-4-image-fit;
   }
 }
+
+.col-4-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $col-4-title-align;
+  }
+  p {
+    text-align: $col-4-text-align;
+  }
+  .btn {
+    min-width: $col-4-btn-width;
+    //@extend $col-4-btn-size;
+  }
+}
+
 
 .col-4-small-img {
+  min-width: $col-4-small-image-width;
+  width: $col-4-small-image-width;
+  text-align: center;
   img {
-    @extend .width-more-height-sm;
+    max-height: $col-4-small-image-height;
+    max-width: $col-4-small-image-width;
+    object-fit: $col-4-small-image-fit;
   }
 }
 
-.block-3-img {
-  img {
-    @extend .height-more-width-md;
+.col-4-small-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $col-4-small-title-align;
+  }
+  p {
+    text-align: $col-4-small-text-align;
+  }
+  .btn {
+    min-width: $col-4-small-btn-width;
+    //@extend $col-4-btn-size;
   }
 }
+
+
+.block-3-img {
+  height: $block-3-image-height;
+  text-align: center;
+  .gatsby-image-wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  img {
+    max-height: $block-3-image-height;
+    max-width: $block-3-image-width;
+    object-fit: $block-3-image-fit;
+  }
+}
+
+.block-3-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $block-3-title-align;
+  }
+  p {
+    text-align: $block-3-text-align;
+  }
+  .btn {
+    min-width: $block-3-btn-width;
+    //@extend $col-4-btn-size;
+  }
+}
+
 
 .feature-carousel {
   .carousel-inner {
