--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -24,14 +24,7 @@ $border-radius-lg: $border-radius;
 
 
 //btn
-$btn-padding-x-lg: 30px;
-$btn-padding-y-lg: 11px;
-$btn-font-size-lg: 22px;
-$btn-padding-x-sm: 30px;
-$btn-padding-y-sm: 8px;
-$btn-font-weight: 400;
-$btn-font-size: 15px;
-$btn-border-radius-lg: $border-radius;
+
 
 
 //link
@@ -81,7 +74,7 @@ $col-1-image-height: 300px;
 $col-1-title-align: left;
 $col-1-text-align: left;
 $col-1-btn-width: 120px;
-$col-1-btn-size: md;
+$col-1-btn-size: lg;
 
 
 $col-3-image-height: 200px;
@@ -92,13 +85,15 @@ $col-3-text-align: center;
 $col-3-btn-width: 120px;
 $col-3-btn-size: md;
 
+
 $col-4-image-height: 200px;
 $col-4-image-fit: contain;
 $col-4-image-width: 100%;
 $col-4-title-align: center;
 $col-4-text-align: center;
 $col-4-btn-width: 120px;
-$col-4-btn-size: md;
+$col-4-btn-size: ms;
+
 
 $col-2-small-image-width: 100px;
 $col-2-small-image-fit: contain;
@@ -106,7 +101,7 @@ $col-2-small-image-height: 100%;
 $col-2-small-title-align: left;
 $col-2-small-text-align: left;
 $col-2-small-btn-width: 120px;
-$col-2-small-btn-size: md;
+$col-2-small-btn-size: sm;
 
 
 $col-4-small-image-width: 100px;
@@ -115,7 +110,7 @@ $col-4-small-image-height: 100%;
 $col-4-small-title-align: left;
 $col-4-small-text-align: left;
 $col-4-small-btn-width: 120px;
-$col-4-small-btn-size: md;
+$col-4-small-btn-size: sm;
 
 
 $block-3-image-height: 200px;
