--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Material+Icons+Round');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
@@ -6,3 +7,4 @@
 @import "pricing.slice";
 @import "common.slice";
 @import "features.slice";
+@import "blog-with-image.slice";
