--- a/src/style/_blog-with-image.slice.scss
+++ b/src/style/_blog-with-image.slice.scss
@@ -1,28 +1,126 @@
-.block-with-image-img {
-  img {
-    width: 100%;
-  }
-}
-
-.block-with-image-block {
-  .btn {
-    width:260px;
-  }
-
+.block-content-right-img {
+  text-align: center;
   .gatsby-image-wrapper {
-    display: inline-block;
-    max-width: 500px;
+    width: $block-content-right-image-width;
   }
-
-  max-width: 795px;
-  margin: 10px auto;
+  img {
+    max-width: $block-content-right-image-width;
+    object-fit: $block-content-right-image-fit;
+    max-height: $block-content-right-image-height;
+  }
 }
 
-.block-with-image-text {
-  ul {
-    display: inline-block;
-    padding: 0;
-    margin-top: 1rem;
-    line-height: 26px;
+.block-content-right-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $block-content-right-title-align;
+  }
+  p {
+    text-align: $block-content-right-text-align;
+  }
+  .btn {
+    min-width: $block-content-right-btn-width;
+    @if $block-content-right-btn-size == sm {
+      @extend .btn-sm;
+    }
+    @if $block-content-right-btn-size == lg {
+      @extend .btn-lg;
+    }
+  }
+}
+
+
+.block-content-left-img {
+  text-align: center;
+  .gatsby-image-wrapper {
+    width: $block-content-left-image-width;
+  }
+  img {
+    max-width: $block-content-left-image-width;
+    object-fit: $block-content-left-image-fit;
+    max-height: $block-content-left-image-height;
+  }
+}
+
+.block-content-left-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $block-content-left-title-align;
+  }
+  p {
+    text-align: $block-content-left-text-align;
+  }
+  .btn {
+    min-width: $block-content-left-btn-width;
+    @if $block-content-left-btn-size == sm {
+      @extend .btn-sm;
+    }
+    @if $block-content-left-btn-size == lg {
+      @extend .btn-lg;
+    }
+  }
+}
+
+
+.block-content-top-img {
+  height: $block-content-top-image-height;
+  text-align: center;
+  .gatsby-image-wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  img {
+    max-height: $block-content-top-image-height;
+    object-fit: $block-content-top-image-fit;
+    max-width: $block-content-top-image-width;
+  }
+}
+
+.block-content-top-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $block-content-top-title-align;
+  }
+  p {
+    text-align: $block-content-top-text-align;
+  }
+  .btn {
+    min-width: $block-content-top-btn-width;
+    @if $block-content-top-btn-size == sm {
+      @extend .btn-sm;
+    }
+    @if $block-content-top-btn-size == lg {
+      @extend .btn-lg;
+    }
+  }
+}
+
+
+.block-content-left-bg-img {
+  .gatsby-image-wrapper {
+    background-repeat: no-repeat;
+  }
+  img {
+    background-repeat: no-repeat;
+    width: $block-content-left-bg-image-width;
+    background-size: $block-content-left-bg-image-size;
+    min-height: $block-content-left-bg-image-height;
+
+  }
+}
+
+.block-content-left-bg-body {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: $block-content-left-bg-title-align;
+  }
+  p {
+    text-align: $block-content-left-bg-text-align;
+  }
+  .btn {
+    min-width: $block-content-left-btn-width;
+    @if $block-content-left-bg-btn-size == sm {
+      @extend .btn-sm;
+    }
+    @if $block-content-left-bg-btn-size == lg {
+      @extend .btn-lg;
+    }
   }
 }
