--- a/src/style/_variables-trt.scss
+++ b/src/style/_variables-trt.scss
@@ -12,12 +12,18 @@ $body-color: #565656;
 
 // header
 $h1-font-size: 44px;
-$h2-font-size: 40px;
-$h3-font-size: 28px;
-$h4-font-size: 22px;
+$h2-font-size: 36px;
+$h3-font-size: 30px;
+$h4-font-size: 17px;
+$header-weight: 700;
 
 $headings-font-family: 'Roboto', sans-serif;
 $headings-line-height: 1.1;
+
+
+//text
+$p-font-size: 18px;
+$p-font-color: black;
 
 
 //border
@@ -43,8 +49,15 @@ $input-border-color: rgba(213, 212, 212, 0.21);
 $input-focus-border-color: #66afe9;
 
 
+//btn
+$btn-padding-y-sm: 6px;
+$btn-padding-y: 8px;
+$btn-padding-y-lg: 10px;
+
+
 //color
-$primary: #5170dd;
+$primary: #205a9c;
+$blue: #3d516e;
 $dark-blue: #2c3e50;
 
 $theme-colors: ();
@@ -77,7 +90,7 @@ $feature-accordion-image-fit: contain;
 $feature-accordion-image-height: 100%;
 $feature-accordion-title-align: left;
 $feature-accordion-text-align: left;
-$feature-accordion-btn-width: 120px;
+$feature-accordion-btn-width: 130px;
 $feature-accordion-btn-size: sm;
 
 
@@ -86,7 +99,7 @@ $feature-list-image-fit: contain;
 $feature-list-image-height: 100%;
 $feature-list-title-align: left;
 $feature-list-text-align: left;
-$feature-list-btn-width: 120px;
+$feature-list-btn-width: 130px;
 $feature-list-btn-size: md;
 
 
@@ -95,7 +108,7 @@ $col-1-image-fit: contain;
 $col-1-image-height: 300px;
 $col-1-title-align: left;
 $col-1-text-align: left;
-$col-1-btn-width: 120px;
+$col-1-btn-width: 130px;
 $col-1-btn-size: lg;
 
 
@@ -104,7 +117,7 @@ $col-3-image-fit: contain;
 $col-3-image-width: 100%;
 $col-3-title-align: center;
 $col-3-text-align: center;
-$col-3-btn-width: 120px;
+$col-3-btn-width: 130px;
 $col-3-btn-size: md;
 
 
@@ -113,7 +126,7 @@ $col-4-image-fit: contain;
 $col-4-image-width: 100%;
 $col-4-title-align: center;
 $col-4-text-align: center;
-$col-4-btn-width: 120px;
+$col-4-btn-width: 130px;
 $col-4-btn-size: ms;
 
 
@@ -122,7 +135,7 @@ $col-2-small-image-fit: contain;
 $col-2-small-image-height: 100%;
 $col-2-small-title-align: left;
 $col-2-small-text-align: left;
-$col-2-small-btn-width: 120px;
+$col-2-small-btn-width: 130px;
 $col-2-small-btn-size: sm;
 
 
@@ -131,7 +144,7 @@ $col-4-small-image-fit: contain;
 $col-4-small-image-height: 100%;
 $col-4-small-title-align: left;
 $col-4-small-text-align: left;
-$col-4-small-btn-width: 120px;
+$col-4-small-btn-width: 130px;
 $col-4-small-btn-size: sm;
 
 
@@ -140,7 +153,7 @@ $block-3-image-fit: contain;
 $block-3-image-width: 100%;
 $block-3-title-align: center;
 $block-3-text-align: center;
-$block-3-btn-width: 120px;
+$block-3-btn-width: 130px;
 $block-3-btn-size: md;
 $block-3-border-radius: 8px;
 
@@ -151,7 +164,7 @@ $block-content-right-image-fit: contain;
 $block-content-right-image-height: 300px;
 $block-content-right-title-align: left;
 $block-content-right-text-align: left;
-$block-content-right-btn-width: 120px;
+$block-content-right-btn-width: 130px;
 $block-content-right-btn-size: lg;
 
 
@@ -160,7 +173,7 @@ $block-content-right-bg-image-size: cover;
 $block-content-right-bg-image-height: 200px;
 $block-content-right-bg-title-align: left;
 $block-content-right-bg-text-align: left;
-$block-content-right-bg-btn-width: 120px;
+$block-content-right-bg-btn-width: 130px;
 $block-content-right-bg-btn-size: lg;
 
 
@@ -170,7 +183,7 @@ $block-content-left-bg-image-height: 200px;
 $block-content-left-bg-image-repeat: no-repeat;
 $block-content-left-bg-title-align: left;
 $block-content-left-bg-text-align: left;
-$block-content-left-bg-btn-width: 120px;
+$block-content-left-bg-btn-width: 130px;
 $block-content-left-bg-btn-size: lg;
 
 
@@ -179,7 +192,7 @@ $block-content-left-image-fit: contain;
 $block-content-left-image-height: 300px;
 $block-content-left-title-align: left;
 $block-content-left-text-align: left;
-$block-content-left-btn-width: 120px;
+$block-content-left-btn-width: 130px;
 $block-content-left-btn-size: lg;
 
 
@@ -188,7 +201,7 @@ $block-content-top-image-fit: contain;
 $block-content-top-image-height: 300px;
 $block-content-top-title-align: center;
 $block-content-top-text-align: center;
-$block-content-top-btn-width: 120px;
+$block-content-top-btn-width: 130px;
 $block-content-top-btn-size: lg;
 
 /*
