--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Material+Icons+Round');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
-@import "variables";
+//@import "variables";
+@import "variables-trt";
 @import "~bootstrap/scss/bootstrap";
 @import "utils";
 @import "navbar.component";
 @import "pricing.slice";
+@import "common";
 @import "common.slice";
 @import "features.slice";
 @import "blog-with-image.slice";
 @import "footer";
+
